# 9900backup

./: .gitignore  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  synthetic_esg_data.csv  z5370046.txt  z5385674.txt
back-end/: .gitignore  README.md  app.py  pyproject.toml
back-end/flask/configs/: startup_config.py
back-end/flask/libs/: data_access.py  register.py
back-end/flask/libs/db/: db.py  db_config.py
back-end/flask/models/: user.py
back-end/flask/server/api/: .gitignore  auth.py
back-end/flask/server/consts/: response_format.py
back-end/flask/server/utils/: password.py  request_parser.py
back-end/flask_app/configs/: startup_config.py
back-end/flask_app/libs/: data_access.py  registry.py
back-end/flask_app/libs/db/: db.py
back-end/flask_app/models/: README.md  user.py
back-end/flask_app/server/api/: auth.py
back-end/flask_app/server/utils/: request_parser.py
backend/: .gitignore  Metrics_weights_modified_v2.csv  P8_Data_Generator_COMP9900.py  README.md  app.py  flask_app.db  install_dependencies.sh  prac.ipynb  pyproject.toml  requirements.txt  settings.py  synthetic_esg_data.csv  synthetic_esg_data_v2.csv
backend/flask_app/configs/: TCFD.json  dev.json  startup_config.py
backend/flask_app/configs/frameworks/: TCFD.json
backend/flask_app/libs/: back_end_framework_generator.py  data_access.py  registry.py
backend/flask_app/libs/db/: db.py  db_config.py
backend/flask_app/libs/jwtmanager/: jwt_config.py  jwt_manager.py
backend/flask_app/libs/mailer/: mailer.py  mailer_config.py
backend/flask_app/models/: base.py  customised_metrics.py  dataset.py  metrics.py  user.py
backend/flask_app/server/api/: admin.py  analysis.py  auth.py  indi.py  mailer.py  profile.py
backend/flask_app/server/consts/: response_format.py
backend/flask_app/server/utils/: admin_parser.py  chatgpt.py  import_admin.py  import_data.py  manage.py  password.py  request_parser.py  verification_code.py
frontend/: README.md  package-lock.json  package.json  readme.md
frontend/public/: index.html
work-diaries/: README  z5336391.txt  z5339884.txt  z5365193.txt  z5370046.txt  z5385674.txt
(+54 files in other folders)
