[tool.poetry]
name = "my-flask-app"
version = "0.1.0"
description = ""
authors = ["Xiangeng Zhao <zhaoxiangeng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^2.3.3"
pydantic = "^2.3.0"
peewee = "^3.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
