[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["la.junkai <lajunkai@lemonstudio.tech>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
pydantic = "^2.3.0"
peewee = "^3.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"


[tool.poetry.scripts]
dev = 'app:run_debug_server'
