[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Xiangeng Zhao <zhaoxiangeng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lanfit-resp = "^0.1.2"
Flask = "^3.0.0"
pydantic = { version = "^1.8", platform = "arm64" }
peewee = "^3.16.3"
pydantic-core = "^2.10.1"
bcrypt = "^4.0.1"
flask-mail = "^0.9.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'app:run_debug_server'